[gd_scene load_steps=24 format=3 uid="uid://tkunjr4eqba7"]

[ext_resource type="PackedScene" uid="uid://n0dla23b1fj5" path="res://Scenes/nivel_2.tscn" id="1_hcnme"]
[ext_resource type="Script" path="res://Scrips/main_2.gd" id="1_ixskc"]
[ext_resource type="AudioStream" uid="uid://b455uhm3ukql1" path="res://Sound/Naruto-Afternoon-of-Konoha.mp3" id="2_550jq"]
[ext_resource type="PackedScene" uid="uid://b8pua6mpjk13d" path="res://Scenes/player.tscn" id="2_ptcfv"]
[ext_resource type="PackedScene" uid="uid://ylfwmgyawc7w" path="res://Scenes/game_over.tscn" id="4_pnfnv"]
[ext_resource type="PackedScene" uid="uid://b5qso5827ibkt" path="res://Scenes/Pausa.tscn" id="6_rd6r3"]
[ext_resource type="PackedScene" uid="uid://b4xcjyi6mgmxl" path="res://Scenes/final_nivel.tscn" id="7_p5m5d"]
[ext_resource type="AudioStream" uid="uid://cbqo8fj5ll3hu" path="res://Sound/efecto-de-sonido-victoria-final-fantasy.mp3" id="8_kt22w"]
[ext_resource type="AudioStream" uid="uid://c03c6yel4m7es" path="res://Sound/DERROTA-EFECTO-DE-SONIDO-.mp3" id="9_1jnau"]
[ext_resource type="PackedScene" uid="uid://54c753qu36p" path="res://Scenes/Enemy2.tscn" id="10_8jcby"]
[ext_resource type="PackedScene" uid="uid://dm5c2y7le0rsq" path="res://Scenes/Enemy.tscn" id="11_e0mm3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ds57"]
size = Vector2(31.25, 33.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewwat"]
size = Vector2(276.5, 23.5246)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvxn4"]
size = Vector2(42, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dswtx"]
size = Vector2(525, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tu3nw"]
size = Vector2(86, 451)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifn86"]
size = Vector2(338, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxfb6"]
size = Vector2(113, 223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5v0j"]
size = Vector2(82, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smyw7"]
size = Vector2(29, 304)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06wxj"]
size = Vector2(343, 242)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxulg"]
size = Vector2(314, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l685"]
size = Vector2(21, 149)

[node name="Main2" type="Node2D"]
script = ExtResource("1_ixskc")

[node name="Musica Fondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_550jq")

[node name="Nivel2" parent="." instance=ExtResource("1_hcnme")]

[node name="Player" parent="Nivel2" instance=ExtResource("2_ptcfv")]
light_mask = 3
position = Vector2(122, 533)
scale = Vector2(0.6, 0.6)
SPEED = 100
fuerza_empuje = 7000

[node name="Camera2D" type="Camera2D" parent="Nivel2/Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_smoothed = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Game Over" parent="CanvasLayer" instance=ExtResource("4_pnfnv")]
visible = false

[node name="Pausa" parent="CanvasLayer" instance=ExtResource("6_rd6r3")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FinalNivel" parent="CanvasLayer" instance=ExtResource("7_p5m5d")]
visible = false

[node name="AreaVictoria" type="Area2D" parent="."]
visible = false
visibility_layer = 3
position = Vector2(1120, 295)
scale = Vector2(4, 4)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaVictoria"]
position = Vector2(-14.75, 27.75)
shape = SubResource("RectangleShape2D_5ds57")

[node name="Colisionadores" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(142.75, 610.7)
scale = Vector2(1, 2.44)
shape = SubResource("RectangleShape2D_ewwat")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(24, 544)
shape = SubResource("RectangleShape2D_bvxn4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(348.5, 22.5)
shape = SubResource("RectangleShape2D_dswtx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(47, 263.5)
shape = SubResource("RectangleShape2D_tu3nw")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(337, 183)
shape = SubResource("RectangleShape2D_ifn86")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(226.5, 361.5)
shape = SubResource("RectangleShape2D_cxfb6")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(241, 546)
shape = SubResource("RectangleShape2D_e5v0j")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(598.5, 182)
shape = SubResource("RectangleShape2D_smyw7")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(533.5, 436)
shape = SubResource("RectangleShape2D_06wxj")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(863, 522)
shape = SubResource("RectangleShape2D_rxulg")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Colisionadores"]
position = Vector2(1108.5, 560.5)
shape = SubResource("RectangleShape2D_1l685")

[node name="SonidoVictoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kt22w")

[node name="SonidoDerrota" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1jnau")

[node name="Enemigos" type="Node2D" parent="."]

[node name="Enemy2" parent="Enemigos" instance=ExtResource("10_8jcby")]
position = Vector2(127, 312)
scale = Vector2(1.2, 1.2)

[node name="Enemy5" parent="Enemigos" instance=ExtResource("10_8jcby")]
position = Vector2(491, 612)
scale = Vector2(1.2, 1.2)

[node name="Enemy3" parent="Enemigos" instance=ExtResource("10_8jcby")]
position = Vector2(494, 89)
scale = Vector2(1.2, 1.2)

[node name="Enemy" parent="Enemigos" instance=ExtResource("11_e0mm3")]
position = Vector2(329, 310)
scale = Vector2(1, 1)

[node name="Enemy4" parent="Enemigos" instance=ExtResource("11_e0mm3")]
position = Vector2(1018, 610)
scale = Vector2(1, 1)

[connection signal="muerto" from="Nivel2/Player" to="." method="_on_player_muerto"]
[connection signal="pausa" from="CanvasLayer/Pausa" to="." method="_on_pausa_pausa"]
[connection signal="body_entered" from="AreaVictoria" to="." method="_on_area_victoria_body_entered"]
